@@ -1,4 +1,10 @@
-﻿*4/14/2014
+﻿*4/15/2014
+
+Automatically display the Change Log window when launching the application after an update
+
+Settings are now saved in the registry, under HK_CURRENT_USER/Software/eXeMeL to prevent them from being overwritten when updated.
+
+*4/14/2014
 
 Added this Change Log window
 
